# TES3-Refr_Index-Converter

./: .gitignore  CMakeLists.txt  README.md  TES3 Refr_Index Converter.cpp  TES3 Refr_Index Converter.rc  TES3 Refr_Index Converter.sln  TES3 Refr_Index Converter.vcxproj  TES3 Refr_Index Converter.vcxproj.filters  database.h  resource.h  tes3_ri_converter.cpp  tes3_ri_help.txt
DB/: tes3_en-ru_refr_index.db  tes3_ru-en_refr_index.db
Headers/: ri_arguments.h  ri_constants.h  ri_data_processor.h  ri_file_processor.h  ri_globals.h  ri_logger.h  ri_mismatches.h  ri_options.h  ri_user_interaction.h
Help/: tes3_ri_help.txt
Libraries/: sqlite3.lib
Resource Files/: resource.h  tes3_ri_converter.rc
Source Files/: database.cpp  logger.cpp  ri_arguments.cpp  ri_data_processor.cpp  ri_database.cpp  ri_file_processor.cpp  ri_globals.cpp  ri_logger.cpp  ri_mismatches.cpp  ri_options.cpp  ri_user_interaction.cpp  tes3_ri_converter.cpp
